--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,5 @@ jobs:
     - name: rust-clippy-check
       uses: actions-rs/clippy-check@v1.0.5
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         toolchain: nightly
