--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,24 +12,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v2
     - name: Install latest nightly
       uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly
-        override: true
         components: rustfmt, clippy
-    - uses: actions/checkout@v2
     - name: Build
       uses: actions-rs/cargo@v1
       with:
         command: build
+    - uses: actions-rs/clippy-check@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        args: --all-features
     - name: Run tests
       uses: actions-rs/cargo@v1
       with:
         command: test
         args: --verbose
-    - name: rust-clippy-check
-      uses: actions-rs/clippy-check@v1.0.5
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        toolchain: nightly
