--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,10 @@ jobs:
         rust: [stable]
     steps:
       - uses: actions/checkout@v2
+      - name: install ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: "2.x"
       - name: Install latest nightly
         uses: actions-rs/toolchain@v1
         with:
@@ -38,3 +42,17 @@ jobs:
         with:
           command: fmt
           args: -- --color=always --check
+
+      - uses: montudor/action-zip@v0.1.0
+        with:
+          args: zip -qq -r ./enforcer.zip ./target/release/hello
+      - name: Release
+        uses: meatlink/action-gh-release@fix-econnreset
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            *.tgz
+            *.zip
+          draft: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
