--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
         rust: [stable]
     steps:
       - uses: actions/checkout@v2
+      - uses: actions-rs/cargo@v1
       - name: install ruby
         uses: actions/setup-ruby@v1
         with:
@@ -24,10 +25,6 @@ jobs:
         with:
           toolchain: nightly
           components: rustfmt, clippy
-      - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -42,6 +39,8 @@ jobs:
         with:
           command: fmt
           args: -- --color=always --check
+      - name: Build
+        run: rake build
 
       - uses: montudor/action-zip@v0.1.0
         with:
