Change pull request trigger events for gh workflow

--- a/.github/workflows/pullrequest_checks.yml
+++ b/.github/workflows/pullrequest_checks.yml
@@ -3,6 +3,7 @@ name: PullrequestChecks
 on:
   pull_request:
     branches: [master]
+    types: [opened, synchronize, reopened, edited]
 
 jobs:
   build:
